# CppAirlineSim

./: .gitignore  CMakeLists.txt  README.md  generate_data.py  run_tests.sh
data/: aircraft.csv  flights.csv
data/include/: Aircraft.h  Assignment.h  CSVLoader.h  Crew.h  Flight.h  Scheduler.h
src/: CSVLoader.cpp  Scheduler.cpp  main.cpp
tests/: test_scheduler.cpp  test_scheduler_extended.cpp  test_scheduler_extended_2.cpp  tests_reporter.cpp
